2008-06-23  Matthew Allum  <mallum@openedhand.com>

	* clutter/clutter-actor.c:
	* clutter/clutter-actor.h:
	* clutter/clutter-event.c:
	* clutter/clutter-event.h:
	* clutter/clutter-main.c:
	* clutter/clutter-main.h:
	* clutter/clutter-private.h:
	* clutter/eglx/clutter-stage-egl.c:
	* clutter/fruity/clutter-backend-fruity.c:
	* clutter/fruity/clutter-backend-fruity.h:
	* clutter/fruity/clutter-fruity.c:
	* clutter/glx/clutter-stage-glx.c:
	* clutter/x11/clutter-backend-x11.c:
	* clutter/x11/clutter-backend-x11.h:
	* clutter/x11/clutter-event-x11.c:
	* clutter/x11/clutter-stage-x11.h:
	* clutter/x11/clutter-x11.h:
	* configure.ac:
	* tests/Makefile.am:
	* tests/test-devices.c:
        Merge of 'xinput' branch giving initial basic support of 
        multiple input devices.

2008-06-23  Matthew Allum  <mallum@openedhand.com>

	* clutter/clutter-actor.c:
	* clutter/clutter-actor.h:
	* clutter/clutter-group.c:
        Remove uneeded (at least for now) paint_area method (#970)

2008-06-19  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-script.c: Be more explicit about the fact that
	the script id is not the name of an actor, and that it is retrieved
	by using clutter_get_script_id().

2008-06-17  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-actor.h:
	* clutter/clutter-actor.c:
	(clutter_actor_allocate_preferred_size): Add more documentation
	and notes on where it's appropriate to call this function.

2008-06-17  Chris Lord  <chris@openedhand.com>

	* clutter/clutter-texture.c: (clutter_texture_get_preferred_width),
	(clutter_texture_get_preferred_height):
	Maintain aspect ratio with natural width/height when for_width/height
	are specified

2008-06-17  Matthew Allum  <mallum@openedhand.com>

	* clutter/clutter-actor.c:
	* clutter/clutter-actor.h:
        Clean up of parenting code (see #972)
        Doc updates to section intro.
        Add clutter_actor_allocate_preferred_size () utility call 
