@@ -1,3 +1,12 @@
+2008-06-23  Emmanuele Bassi  <ebassi@openedhand.com>
+
+	Bug 981 - clutter_stage_read_pixels temprow fix (Haakon Sporsheim)
+
+	* clutter/clutter-stage.c (clutter_stage_read_pixels): Allocate
+	the temporary row data used to flip the buffer from glReadPixels()
+	in order to fix compilation under MSVC. Also validate the input
+	parameters to avoid random segfaults.
+
 2008-06-23  Matthew Allum  <mallum@openedhand.com>
 
 	* clutter/clutter-actor.c:
